<resources>
    <string name="app_name">Fun with Math!</string>
    <string name="timeLeft">Time Left: %1$s</string>
    <string name="correct">Correct!</string>
    <string name="wrong">Wrong!</string>
    <string name="currentScore">Score: %1$s</string>
    <string name="playAgain">Play again</string>
    <string name="totalScore">Your score: %1$s</string>
    <string name="back">Back</string>
    <string name="play">Play</string>
    <string name="highScore">Highscore</string>
    <string name="name">Name</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="save">Save</string>
    <string name="loadInfo">User loaded: %1$s, difficulty %2$s</string>
    <string name="loadError">No user found</string>
    <string name="saveMessage">User saved</string>
    <string name="saveError">Unable to save user</string>
    <string name="score">Score</string>
    <string name="method">Method</string>
    <string name="date">Date</string>


</resources>