<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".gameActivity">


    <TextView
        android:id="@+id/tvTop"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/secondary_color"
        android:fontFamily="@font/frijole"
        android:paddingTop="4dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/frijole"
        android:text="@string/timeLeft"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/startLayout"
        android:layout_width="240dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTop">

        <Button
            android:id="@+id/btnStart"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"

            android:layout_marginBottom="24dp"
            android:background="@color/complementary_color"
            android:text="@string/play"
            android:fontFamily="@font/frijole"
            app:layout_constraintBottom_toTopOf="@+id/btnBackHighScore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnBackHighScore"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@color/complementary_color"
            android:fontFamily="@font/frijole"
            android:text="@string/back"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/frijole"
            android:text="@string/totalScore"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameElements"
        android:layout_width="240dp"
        android:layout_height="340dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTop">

        <TextView
            android:id="@+id/tvNumber"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:fontFamily="@font/frijole"
            android:text="49+49="
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnFirst"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="12dp"
            android:background="@color/secondary_color"
            android:fontFamily="@font/frijole"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="44sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNumber" />

        <Button
            android:id="@+id/btnSecond"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/secondary_color"
            android:fontFamily="@font/frijole"
            android:text="2"
            android:textColor="@color/black"
            android:textSize="44sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnFirst" />

        <Button
            android:id="@+id/btnThird"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:background="@color/secondary_color"
            android:fontFamily="@font/frijole"
            android:text="3"
            android:textColor="@color/black"
            android:textSize="44sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFirst" />

        <Button
            android:id="@+id/btnFourth"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/secondary_color"
            android:fontFamily="@font/frijole"
            android:text="4"
            android:textColor="@color/black"
            android:textSize="44sp"
            app:layout_constraintEnd_toEndOf="@+id/btnSecond"
            app:layout_constraintTop_toTopOf="@+id/btnThird" />

        <TextView
            android:id="@+id/tvCorrectAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/frijole"
            android:text="@string/currentScore"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/frijole"
        android:text="@string/correct"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/gameElements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimer" />


</androidx.constraintlayout.widget.ConstraintLayout>